@@ -278,6 +278,9 @@ Unreleased changes (1.0-dev)
 
 102. NUTCH-621 - Nutch needs to declare it's crypto usage (mattmann)
 
+103. NUTCH-654 - urlfilter-regex's main does not work.
+     (dogacan)
+
 Release 0.9 - 2007-04-02
 
  1. Changed log4j confiquration to log to stdout on commandline
